crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_where.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Ord[a] where a: 1 {}"
---
Where(
    Bound(
        1,
        23,
    ),
    1,
    19,
)
