crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__trait_assoc_type_and_fn.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Iterator[i] {\n    type Item\n    fn next(it: i) Option[Item]\n}\n"
---
TraitDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
        value: "Iterator",
    },
    params: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 16,
                },
                end: Position {
                    line: 1,
                    column: 17,
                },
            },
            value: "i",
        },
    ],
    where_clause: [],
    items: [
        AssocType(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 10,
                    },
                    end: Position {
                        line: 2,
                        column: 14,
                    },
                },
                value: "Item",
            },
        ),
        Fn(
            FnDecl {
                is_async: false,
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 8,
                        },
                        end: Position {
                            line: 3,
                            column: 12,
                        },
                    },
                    value: "next",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 13,
                                },
                                end: Position {
                                    line: 3,
                                    column: 15,
                                },
                            },
                            value: Var(
                                "it",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 18,
                                    },
                                },
                                value: Var {
                                    name: "i",
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 20,
                            },
                            end: Position {
                                line: 3,
                                column: 32,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 20,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 26,
                                            },
                                        },
                                        value: "Option",
                                    },
                                ],
                            },
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 27,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 31,
                                        },
                                    },
                                    value: Named {
                                        path: Path {
                                            segments: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 3,
                                                            column: 27,
                                                        },
                                                        end: Position {
                                                            line: 3,
                                                            column: 31,
                                                        },
                                                    },
                                                    value: "Item",
                                                },
                                            ],
                                        },
                                        args: [],
                                    },
                                },
                            ],
                        },
                    },
                ),
                where_clause: [],
                body: None,
            },
        ),
    ],
}
