crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__trait_fn_where.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Container[c] {\n    type Item\n    fn sum(xs: c) Number where c.Item == Number\n}\n"
---
TraitDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 7,
            },
            end: Position {
                line: 1,
                column: 16,
            },
        },
        value: "Container",
    },
    params: [
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 17,
                },
                end: Position {
                    line: 1,
                    column: 18,
                },
            },
            value: "c",
        },
    ],
    where_clause: [],
    items: [
        AssocType(
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 10,
                    },
                    end: Position {
                        line: 2,
                        column: 14,
                    },
                },
                value: "Item",
            },
        ),
        Fn(
            FnDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 8,
                        },
                        end: Position {
                            line: 3,
                            column: 11,
                        },
                    },
                    value: "sum",
                },
                params: [
                    Param {
                        pattern: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 12,
                                },
                                end: Position {
                                    line: 3,
                                    column: 14,
                                },
                            },
                            value: Var(
                                "xs",
                            ),
                        },
                        annotation: Some(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 16,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 17,
                                    },
                                },
                                value: Var {
                                    name: "c",
                                    args: [],
                                },
                            },
                        ),
                    },
                ],
                ret: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 19,
                            },
                            end: Position {
                                line: 3,
                                column: 25,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 19,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 25,
                                            },
                                        },
                                        value: "Number",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ),
                where_clause: [
                    AssocEq {
                        var: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 32,
                                },
                                end: Position {
                                    line: 3,
                                    column: 33,
                                },
                            },
                            value: "c",
                        },
                        assoc: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 34,
                                },
                                end: Position {
                                    line: 3,
                                    column: 38,
                                },
                            },
                            value: "Item",
                        },
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 42,
                                },
                                end: Position {
                                    line: 3,
                                    column: 48,
                                },
                            },
                            value: Named {
                                path: Path {
                                    segments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 42,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 48,
                                                },
                                            },
                                            value: "Number",
                                        },
                                    ],
                                },
                                args: [],
                            },
                        },
                    },
                ],
                body: None,
            },
        ),
    ],
}
